--- a/about.html
+++ b/about.html
@@ -72,7 +72,8 @@
         <div class="row d-flex justify-content-center">
           <div class="col-lg-6 text-center">
             <h2>About</h2>
-            <p>As Tyler, a high school student athlete, I find myself navigating the hectic schedule of practices, games, and academics with unwavering determination. Baseball and basketball are my passions, each offering its unique challenges and rewards. On the baseball diamond, I thrive in the crack of the bat and the rush of sliding into home plate, driven by the camaraderie of my teammates and the pursuit of victory. Meanwhile, on the basketball court, I relish the sound of sneakers squeaking against the hardwood and the swish of the net as I sink a crucial three-pointer, fueled by the adrenaline of competition and the desire to push myself to new heights. Balancing my athletic pursuits with my studies requires discipline and time management, but I embrace the challenge wholeheartedly, knowing that the lessons I learn on the field and court will serve me well in all aspects of life.
+            <p>
+              Hi, I’m Tyler. I’ve always been someone who loves to stay busy and challenge myself, whether it’s in the classroom, on the baseball field, or behind a computer screen. I take pride in maintaining good grades because I know how important academics are for my future. When I’m not studying, you’ll probably find me on the diamond, where I’ve been honing my skills and pushing myself to be the best player I can be. On top of that, I have a real knack for web design—it’s something I’ve always found exciting. I enjoy creating clean, functional websites, and it’s cool to see my ideas come to life online. Balancing everything can be tough sometimes, but I love what I do, and it keeps me motivated.
             </p>
 
             <a class="cta-btn" href="contact.html">Available for hire</a>
@@ -101,7 +102,7 @@
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>16</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>17</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>126TKuncken@frhsd.com</span></li>
                 </ul>
               </div>
